tests/parser/property_arguments/test_3.m.out
In test_3.m, line 22
|         propArgs.?matlab.graphics.chart.primitive.Bar
|                  ^ error: expected IDENTIFIER, found METACLASS instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
